/removed the about box. i will replace it with a better one shortly

--- a/src/gui/resources/IPDdumpAboutBox.properties
+++ b/src/gui/resources/IPDdumpAboutBox.properties
@@ -1,27 +1,20 @@
-title = About: ${Application.title} ${Application.version} 
-
+title = About: ${Application.title} ${Application.version}
+Application.id = ${Application.name}
 closeAboutBox.Action.text = &Close
-
 appDescLabel.text=<html>${Application.description}
-
 versionLabel.text=Product Version\:
-
 vendorLabel.text=Vendor\:
-
 homepageLabel.text=Homepage\:
-
-# Application global resources
-
 Application.name = IPDdump
 Application.title = IPDdump About
 Application.version = 0.2
 Application.vendor = Jimmys, Borkhobs
+Application.vendor = Sun Microsystems Inc.
 Application.homepage = http://code.google.com/p/ipddump/
 Application.description = The ipddump utility was created initially to extract SMS records from a Blackberry backup, which is an IPD (Inter@ctive Pager Backup) file. Its goal is to be able to extract and export all types of records into customized open text formats. It now supports Sms, Contacts and Memos in XML, CSV and plain text formats! The app is 100% free! please leave feedback in http://code.google.com/p/ipddump/issues/list for any issues you might have!
 Application.vendorId = Jimmys, Borkhobs
 Application.id = ${Application.name}
 Application.lookAndFeel = system
-
+imageLabel.text=/resources/about.png
 #NOI18N
 imageLabel.icon=about.png
-closeButton.text=Close
